# effective-haskell.com

./: .gitignore  README.md  flake.nix
builder/: LICENSE  default.nix  effective-haskell-com.cabal  site.hs
site/: .gitignore  CNAME  archive.html  index.html
site/bonus-content/chapter6/: default-signatures.md
site/chapters/: chapter1.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md
site/css/: default.css  syntax.css
site/images/: site-image-large.xcf
site/projects/: filepack.md  hcat.md  projects.md  shell-command.md  spellcheck.md
site/setup/: getting-started.md
site/solutions/: solutions.md
site/solutions/chapter1/: currying.md  factorials.md  fibonacci.md
site/solutions/chapter10/: metrics-strictness.md  timing-pure-functions.md  traverseDirectoryIO.md
site/solutions/chapter11/: build-a-trace-tool.md  building-a-real-archival-tool.md  nested-filepacks.md
site/solutions/chapter12/: a-configurable-status-line-for-hcat.md  command-line-argument-parsing.md  pretty-printing-and-parsing.md
site/solutions/chapter13/: a-new-filepackparser.md  building-out-the-monad-transformer-library.md
site/templates/: all-solutions.html  chapter-list.html  chapter-preview.html  chapter-solution-list.html  chapter-solutions.html  chapter-template.html  chapter-template.md  default.html  exercise-solution.html  post-list.html  post.html
solution-code/: CHANGELOG.md  Makefile  package.yaml  solution-code.cabal
(+108 files in other folders)
