name:            effective-haskell-com
version:         0.1.0.0
build-type:      Simple
cabal-version:   >= 1.10
license:         BSD3
license-file:    LICENSE

executable builder
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll
                  , time
                  , filepath
                  , directory
                  , unix
                  , pandoc
                  , pandoc-types
                  , containers
  ghc-options:      -threaded
  default-language: Haskell2010
